TAG: lib_java_dbsmgd-gtlf-BP
DATE: 01/21/2009
STAFF: sc
CHANGES: Branch point tag for GT LF

TAG: lib_java_dbsmgd-4-1-2-2
DATE: 09/11/2008
STAFF: jmason
CHANGES: add tables required for the targeted allele load (TR 8524)

TAG: lib_java_dbsmgd-4-1-2-1
DATE: 09/11/2008
STAFF: jmason
CHANGES: add tables required for the targeted allele load (TR 8524)

TAG: lib_java_dbsmgd-4-0-0-1
DATE: 05/07/2008
STAFF: sc
CHANGES: merge tr7493 branch (egload)

TAG: lib_java_dbsmgd-tr8543-BP
DATE: 03/26/2008
STAFF: sc
CHANGES: Build 37 Branch Point - this branch point tag is no longer
needed, its changes are included in the tr7493 branch

TAG: lib_java_dbsmgd-tr7493-3
DATE: 04/15/2008
STAFF: sc
CHANGES:
1) removed SeqIdsByMarkerIdLookup, added SeqIdsByMarkerKeyLookup

TAG: lib_java_dbsmgd-tr7493-2
DATE: 03/31/2008
STAFF: sc
CHANGES:
1) SeqIdsByMarkerIdLookup (egload)

TAG: lib_java_dbsmgd-tr7493-1
DATE: 01/29/2008
STAFF: sc
CHANGES:
1) CoordMapCollectionKeyLookup - updated to return null rather than 
    exception upon failed lookup (not in MGI)
2) CoordMapFeatureKeyLookup, CoordMapFeatureLookup - added

TAG: lib_java_dbsmgd-tr7493-BP
DATE: 01/28/2008
STAFF: sc
CHANGES: Gene Traps Less Filling Branch Point

TAG: lib_java_dbsmgd-3-5-1-2
DATE: 11/14/2006
STAFF: lec
CHANGES: TR8001: TIGR to DFCI

TAG: lib_java_dbsmgd-3-5-1-1
DATE: 09/06/2006
STAFF: sc
CHANGES: merge build36 branch to trunK

TAG: lib_java_dbsmgd-build36-2
DATE: 8/21/2006
STAFF: sc
CHANGES:
1) LogicalDBConstants - added VEGA

TAG: lib_java_dbsmgd-build36-1
DATE: 8/16/2006
STAFF: sc
CHANGES:
1) TR7619, item 4, init the translator cache in StrainKeyLookup constructor, 
    so connection to database for any app that uses StrainKeylookup may 
    be closed.

TAG: lib_java_dbsmgd-build36-BP
DATE: 6/27/2006
STAFF: sc
CHANGES:
1) Branch point tag for Build 36

TAG: lib_java_dbsmgd-3-5-0-3
DATE: 5/5/2006
STAFF: dbm
CHANGES:
1) Added clean.code to buildall task

TAG: lib_java_dbsmgd-3-5-0-2
DATE: 5/2/2006
STAFF: dbm
CHANGES: