@@ -17,27 +17,39 @@ public class LogicalDBConstants
     // Constants
     //
     public static final int MGI = 1;
+    public static final int MEDLINE = 7;
     public static final int SEQUENCE = 9;
     public static final int SWISSPROT = 13;
+    public static final int JAXREGISTRY = 22;
     public static final int REFSEQ = 27;
-    public static final int TREMBL = 41;
+    public static final int PUBMED = 29;
     public static final int DFCI = 35;
     public static final int DOTS = 36;
+    public static final int TREMBL = 41;
+    public static final int NIA15K = 46;
+    public static final int NIA7_4K = 50;
+    public static final int RIKEN = 51;
+    public static final int ENTREZ_GENE = 55;
     public static final int NCBI_GENE = 59;
     public static final int ENSEMBL_GENE = 60;
-    public static final int ENTREZ_GENE = 55;
-    public static final int JAXREGISTRY = 22;
+    public static final int IGTC = 66;
+    public static final int LEXICON_SEQUENCE = 67;
     public static final int REFSNP = 73;
     public static final int SUBSNP = 74;
     public static final int SUBMITTERSNP = 75;
     public static final int SNPPOPULATION = 76;
     public static final int HOMOLOGENE = 81;
     public static final int VEGA_GENE = 85;
-
-    public static final int RIKEN = 51;
-    public static final int NIA15K = 46;
-    public static final int NIA7_4K = 50;
-
-    public static final int PUBMED = 29;
-    public static final int MEDLINE = 7;
+    public static final int BAYGENOMICS = 95;
+    public static final int LEXICON_CELLLINE = 96;
+    public static final int TIGM = 97;
+    public static final int TIGEM = 98;
+    public static final int CMHD = 99;
+    public static final int ESDB = 100;
+    public static final int EGTC = 101;
+    public static final int GGTC = 102;
+    public static final int SIGTR = 103;
+    public static final int FHCRC = 104;
+    public static final int TIGM_CELLLINE = 121;
+    
 }
