@@ -1,7 +1,3 @@
-//  $Header$
-//  $Header$
-//  $Name$
-
 package org.jax.mgi.dbs.mgd;
 
 /**
@@ -25,86 +21,16 @@ public class MGITypeConstants
     public static final int CLONE = 3;
     public static final int SOURCE = 5;
     public static final int STRAIN = 10;
+    public static final int ALLELE = 11;
     public static final int VOCABULARY = 14;
     public static final int ORGANISM = 20;
     public static final int TISSUE = 24;
     public static final int SEQUENCE = 19;
     public static final int CHROMOSOME = 27;
+    public static final int CELLLINE = 28;
     public static final int CONSENSUSSNP = 30;
     public static final int SUBSNP = 31;
     public static final int SNPPOPULATION = 33;
+    public static final int DERIVATION = 36; 
 }
 
-
-//  $Log$
-//  Revision 1.7  2005/12/02 16:04:30  pf
-//  3.41 maint7119 branch merge to trunk
-//
-//  Revision 1.6  2005/10/12 18:13:08  jsb
-//  lib_java_dbsmgd-3-4-0-0
-//
-//  Revision 1.5.26.1  2005/09/21 19:54:36  sc
-//  merge of snp and tr5972 branch to tr7081 branch
-//
-//  Revision 1.5.20.2  2005/09/21 14:33:00  sc
-//  added MGITypes tr1560 SNP
-//
-//  Revision 1.5.20.1  2005/08/30 15:26:15  sc
-//  TR1560 SNP
-//
-//  Revision 1.5.28.1  2005/11/09 00:08:25  jw
-//  lib_java_dbsmgd-3-4-1-0
-//
-//  Revision 1.6  2005/10/12 18:13:08  jsb
-//  lib_java_dbsmgd-3-4-0-0
-//
-//  Revision 1.5.26.1  2005/09/21 19:54:36  sc
-//  merge of snp and tr5972 branch to tr7081 branch
-//
-//  Revision 1.5.20.2  2005/09/21 14:33:00  sc
-//  added MGITypes tr1560 SNP
-//
-//  Revision 1.5.20.1  2005/08/30 15:26:15  sc
-//  TR1560 SNP
-//
-//  Revision 1.5  2004/10/12 12:42:38  sc
-//  TR5395 added CHROMOSOME. VOCABULARY key changed
-//
-//  Revision 1.4  2004/02/04 19:41:29  mbw
-//  merged jsam branch to the trunk
-//
-//  Revision 1.3.2.1  2003/11/13 20:38:50  sc
-//  added SEQUENCE constant
-//
-//  Revision 1.3  2003/09/25 20:25:32  mbw
-//  added new constants
-//
-//  Revision 1.2  2003/09/25 17:36:02  mbw
-//  changed MGI to REF
-//
-//  Revision 1.1  2003/09/18 14:25:18  dbm
-//  Initial version
-//
-//
-/**************************************************************************
-*
-* Warranty Disclaimer and Copyright Notice
-*
-*  THE JACKSON LABORATORY MAKES NO REPRESENTATION ABOUT THE SUITABILITY OR
-*  ACCURACY OF THIS SOFTWARE OR DATA FOR ANY PURPOSE, AND MAKES NO WARRANTIES,
-*  EITHER EXPRESS OR IMPLIED, INCLUDING MERCHANTABILITY AND FITNESS FOR A
-*  PARTICULAR PURPOSE OR THAT THE USE OF THIS SOFTWARE OR DATA WILL NOT
-*  INFRINGE ANY THIRD PARTY PATENTS, COPYRIGHTS, TRADEMARKS, OR OTHER RIGHTS.
-*  THE SOFTWARE AND DATA ARE PROVIDED "AS IS".
-*
-*  This software and data are provided to enhance knowledge and encourage
-*  progress in the scientific community and are to be used only for research
-*  and educational purposes.  Any reproduction or use for commercial purpose
-*  is prohibited without the prior express written permission of The Jackson
-*  Laboratory.
-*
-* Copyright \251 1996, 1999, 2002, 2003 by The Jackson Laboratory
-*
-* All Rights Reserved
-*
-**************************************************************************/
