@@ -18,10 +18,16 @@ public class TranslationTypeConstants
     //
     public static final int GENDER = 1000;
     public static final int ORGANISM = 1001;
+    public static final int PROVIDER = 1002;
     public static final int SEQUENCETYPE = 1003;
     public static final int TISSUE = 1004;
     public static final int CELL = 1005;
     public static final int LIBRARY = 1006;
     public static final int STRAIN = 1007;
     public static final int ORGANISM_TO_STRAIN = 1008;
+    public static final int PARENT_CELL_LINE = 1015;
+    public static final int DERIVATION = 1016;
+    public static final int CELL_LINE_CREATOR = 1017; 
+    public static final int CELL_LINE_LABCODE = 1018;
+    public static final int VECTOR_NAME= 1019;
 }
