@@ -20,14 +20,32 @@ public class VocabularyTypeConstants
     public static final int GENDER = 17;
     public static final int CELLLINE = 18;
     public static final int SEQUENCEQUALITY = 19;
+    public static final int SEQUENCESTATUS = 20;
     public static final int SEQUENCETYPE = 21;
     public static final int VECTORTYPE = 24;
     public static final int SEQUENCEPROVIDER = 25;
-    public static final int SEQUENCESTATUS = 20;
     public static final int MAPTYPE = 29;
     public static final int MAPUNIT = 30;
+    public static final int ALLELE_INHERIT_MODE = 35;
+    public static final int ALLELE_MOL_MUT = 36;
+    public static final int ALLELE_STATUS = 37;
+    public static final int ALLELE_TYPE = 38;
+    public static final int SNPFUNCTION = 49;
     public static final int SNPVARCLASS = 50;
     public static final int SUBHANDLE = 51;
-    public static final int SNPFUNCTION = 49;
-
+    public static final int ALLELE_MODE = 59;
+    public static final int GENOTYPE_EXISTS_AS = 60;
+    public static final int ALLELE_TRANS = 61;
+    public static final int CELLLINE_CREATOR = 62;
+    public static final int CELLLINE_TYPE = 63;
+    public static final int CELLLINE_VECTOR_TYPE = 64;
+    public static final int DERIVATION_TYPE = 65;
+    public static final int SEQ_TAG_METHOD = 66;
+    public static final int GT_VECTOR_END = 67;
+    public static final int REVERSE_COMP = 68;
+    public static final int SEQ_ALLELE_ASSOC_QUAL = 69;
+    public static final int MKR_ALLELE_ASSOC_QUAL = 70;
+    public static final int CELLLINE_LABCODE = 71;
+    public static final int CELLLINE_VECTOR_NAME = 72;
+    
 }
