@@ -1,22 +1,27 @@
-PRB_Probe
-PRB_Source
-PRB_Reference
 ACC_Accession
 ACC_AccessionReference
 ALL_Allele
+ALL_Allele_CellLine
 ALL_Allele_Mutation
 ALL_CellLine
-MGI_Note
-MGI_NoteChunk
-SEQ_Sequence
-SEQ_Sequence_Raw
-MGI_Reference_Assoc
-MGI_AttributeHistory
-MGI_SetMember
-SEQ_Source_Assoc
+ALL_CellLine_Derivation
+ALL_Marker_Assoc
 MAP_Coord_Collection
 MAP_Coordinate
 MAP_Coord_Feature
-MRK_Chromosome
+MGI_AttributeHistory
 MGI_dbinfo
+MGI_Note
+MGI_NoteChunk
+MGI_Reference_Assoc
+MGI_SetMember
 MGI_Tables
+MRK_Chromosome
+PRB_Probe
+PRB_Reference
+PRB_Source
+SEQ_Allele_Assoc
+SEQ_GeneTrap
+SEQ_Sequence
+SEQ_Sequence_Raw
+SEQ_Source_Assoc
