@@ -1,3 +1,8 @@
+TAG: lib_java_dbsmgd-gtlf-1
+DATE: 01/21/2009
+STAFF: sc
+CHANGES: additions to constants files and generatedTables.txt
+
 TAG: lib_java_dbsmgd-gtlf-BP
 DATE: 01/21/2009
 STAFF: sc
